<resources>
    <string name="app_name">My Movie Catalogues</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="catalogues">Catalogues</string>
    <string name="details_movie">Details Movie</string>
    <string name="details_tv_show">Details TV Show</string>
    <string name="tv_show">TV Show</string>
    <string name="movies">Movies</string>
    <string name="title_movie">Title</string>
    <string name="year_movie">Year</string>
    <string name="title_tv">Title</string>
    <string name="year_tv">Year</string>
    <string name="my_movie_catalogues">My Movie \nCatalogues</string>
    <string name="search_tv_show">Search TV Show…</string>
    <string name="search_movie">Search Movie…</string>
    <string name="action_blockbuster">Action, Blockbuster</string>
    <string name="aquaman_the_litle_mermaid">AQUAMAN The litle mermaid</string>
    <string name="_8_4">8.4</string>
    <string name="loading">loading…</string>
    <string name="_84">84</string>
    <string name="anna_sowa">Anna, Sowa</string>
    <string name="vote">vote</string>
    <string name="release_date">Release Date</string>
    <string name="popularity">Popularity</string>
    <string name="movie_catalogues">Movie Catalogues</string>
    <string name="tv_show_catalogues">TV Show Catalogues</string>
    <string name="first_air_date">First Air Date</string>
    <string name="origin_country">Origin Country</string>
    <string name="overview">Overview</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="favourite_lists">Favorite List</string>
    <string name="airing_today">Airing Today</string>
    <string name="unfavorite">Unfavorite</string>
    <string name="favorite">Favorite</string>
    <string name="message_add_favorite">Add to Favorite List</string>
    <string name="message_delete_favorite">Delete form Favorite List</string>
    <string name="data_not_found">Data not found</string>
    <string name="exit_message">You want to exit, are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="search">Search</string>
    <string name="notification">Notification</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="release_reminder">Release Reminder</string>
    <string name="daily_text">My Movie Catalogues is update!</string>
    <string name="setting">Settings</string>
    <string name="language">Change Languange</string>
    <string name="release_text">Release Today!</string>
</resources>
