<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_movie"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#3c3f41">

            <ImageView
                android:id="@+id/iposter_path_movie"
                android:layout_width="75dp"
                android:layout_height="100dp"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/title_movie"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:layout_marginTop="10dp"
                android:fontFamily="casual"
                android:text="@string/aquaman_the_litle_mermaid"
                android:textAllCaps="true"
                android:textColor="#fff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/popularity_movie"
                android:layout_width="110dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title_movie"
                android:layout_marginStart="100dp"
                android:layout_marginLeft="100dp"
                android:text="@string/action_blockbuster"
                android:textColor="#c1c1c1"
                android:textSize="12sp"
                android:textStyle="italic"
                tools:ignore="SmallSp" />

            <ImageView
                android:id="@+id/star"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/star"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/vote_average_movie"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/star"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="20dp"
                android:layout_marginRight="20dp"
                android:text="@string/_8_4"
                android:textAlignment="center"
                android:textColor="#fff"
                android:textSize="12sp" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>